other-vpol/allowed-pod-priorities/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: pod-priority-ns
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
  priorityClassName: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: no-priority-ns
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
  priorityClassName: low
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: pod-priority-ns
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
  priorityClassName: high
---
apiVersion: v1
kind: Pod
metadata:
  name: exception-priority
  namespace: pod-priority-ns
spec:
  priorityClassName: foo
  containers:
  - name: pod
    image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  namespace: pod-priority-ns
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
  priorityClassName: low
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
  namespace: no-priority-ns
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
  priorityClassName: foo
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
    - name: pod01
      image: ghcr.io/kyverno/test-busybox:1.35
  priorityClassName: low
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment01
  namespace: pod-priority-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      priorityClassName: foo
      containers:
      - name: bb-01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeployment02
  namespace: pod-priority-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      priorityClassName: foo
      containers:
      - name: bb-01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
  namespace: pod-priority-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          priorityClassName: med
          containers:
            - name: bb-01
              image: kyverno
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
  namespace: pod-priority-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          priorityClassName: foo
          containers:
            - name: bb-01
              image: kyverno
          restartPolicy: OnFailure
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment01
  namespace: pod-priority-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      priorityClassName: high
      containers:
      - name: bb-01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: gooddeployment02
  namespace: no-priority-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      priorityClassName: foo
      containers:
      - name: bb-01
        image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
  namespace: pod-priority-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          priorityClassName: medium
          containers:
            - name: bb-01
              image: kyverno
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
  namespace: no-priority-ns
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          priorityClassName: foo
          containers:
            - name: bb-01
              image: kyverno
          restartPolicy: OnFailure
