other-vpol/allowed-pod-priorities/.kyverno-test/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: context
spec:
  resources:
  - apiVersion: v1
    data:
      pod-priority-ns: "high, medium, low"
      no-priority-ns: foo
    kind: ConfigMap
    metadata:
      name: allowed-pod-priorities
      namespace: default
